--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Currículo - Ryan</title>
+    <link rel="icon" type="image/png" href="https://diretoaoponto-tech.com.br/icon-target.png" />
     <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
     <div class="grid">
         <header class="header page-width">
-            <div>
+            <div class="logo">
                 <h3>
                     RYAN
                 </h3>
@@ -46,11 +47,31 @@
             <div class="home-content page-width">
                 <div class="half">
                     <div class="title-container">
-                        <h1 class="title">Olá, Eu sou o Ryan, um desenvolvidor web</h1>
+                        <h1 class="title">Olá, Eu sou o Ryan, um desenvolvidor web
+
+                            <div class="icon-group flex center">
+                                <div class="flex center icon-container">
+                                    <a target="_blank" href="https://www.linkedin.com/in/ryan-coelho-217b11200">
+                                        <img src="./linkedin-3-48.ico" alt="">
+                                    </a>
+                                </div>
+
+                                <div class="flex center icon-container">
+                                    <a target="_blank" href="https://github.com/ryanitj">
+                                        <img src="./icons8-github-64.png" alt="">
+                                    </a>
+
+                                </div>
+                            </div>
+
+
+                        </h1>
 
 
                         <p class="description-title">
                             Meu Background
+
+
                         </p>
 
                         <p class="description">
@@ -85,16 +106,96 @@
 
         <section class="skills" id="SKILLS">
             <div class="skills-content page-width">
+
+                <h1 class="title">Minhas Habilidades</h1>
+
                 <div class="flex-row">
 
                     <p class="description-title">
-                        Meu Background
+                        Skills
+                    </p>
+
+
+                    <div class="description-container half">
+                        <li>
+                            <ul>
+                                <p class="description">
+                                    • JavaScript
+                                </p>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <ul>
+                                <p class="description">
+                                    • HTML5
+                                </p>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <ul>
+                                <p class="description">
+                                    • CSS3
+                                </p>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <ul>
+                                <p class="description">
+                                    • React
+                                </p>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <ul>
+                                <p class="description">
+                                    • React Native
+                                </p>
+                            </ul>
+                        </li>
+                        <li>
+                            <ul>
+                                <p class="description">
+                                    • Laravel
+                                </p>
+                            </ul>
+                        </li>
+
+                    </div>
+
+                </div>
+
+                <div class="flex-row">
+
+                    <p class="description-title">
+                        Estudo
                     </p>
 
 
                     <div class="description-container half">
                         <p class="description">
-                            Meu Background
+                            • Univali
+                        </p>
+
+                        <p class="description">
+                            &nbsp&nbsp&nbsp Ciência da Computação
+                        <p class="description-date"> &nbsp&nbsp&nbsp&nbsp 2020 - 2021</p>
+
+                        </p>
+
+                        <p class="description">
+                            &nbsp&nbsp&nbsp Design Gráfico
+
+                        <p class="description-date"> &nbsp&nbsp&nbsp&nbsp 2021 - 2022</p>
+                        </p>
+
+                        <p class="description">
+                            &nbsp&nbsp&nbsp Sistema para Internet
+
+                        <p class="description-date"> &nbsp&nbsp&nbsp&nbsp 2022 - 2023</p>
                         </p>
                     </div>
 
@@ -103,62 +204,47 @@
                 <div class="flex-row">
 
                     <p class="description-title">
-                        Meu Background
+                        Experiência de Trabalho
                     </p>
 
 
                     <div class="description-container half">
                         <p class="description">
-                            Meu Background
+                            • Modallport Sistemas Ltda
+
+                        <p class="description-date">
+                            &nbsp&nbsp&nbsp (Itajaí, 2020 - 2021)
+
                         </p>
-                    </div>
-
-                </div>
-
-                <div class="flex-row">
-
-                    <p class="description-title">
-                        Meu Background
-                    </p>
-
-
-                    <div class="description-container half">
                         <p class="description">
-                            Meu Background
+                            &nbsp&nbsp&nbsp Programador Front-End
                         </p>
-                    </div>
 
-                </div>
-
-                <div class="flex-row">
-
-                    <p class="description-title">
-                        Meu Background
-                    </p>
-
-
-                    <div class="description-container half">
                         <p class="description">
-                            Meu Background
+                            • MapiPay
+
+                        <p class="description-date">
+                            &nbsp&nbsp&nbsp (Itajaí, 2021 - 2022)
+
                         </p>
-                    </div>
-
-                </div>
-
-                <div class="flex-row">
-
-                    <p class="description-title">
-                        Meu Background
-                    </p>
-
-
-                    <div class="description-container half">
                         <p class="description">
-                            Meu Background
+                            &nbsp&nbsp&nbsp Programador Front-End
+                        </p>
+
+                        <p class="description">
+                            • GeBit
+
+                        <p class="description-date">
+                            &nbsp&nbsp&nbsp (Itajaí, 2022 - 2023)
+                        </p>
+
+                        <p class="description">
+                            &nbsp&nbsp&nbsp Programador Front-End
                         </p>
                     </div>
 
                 </div>
+
 
 
 
@@ -176,16 +262,16 @@
 
                         <div class=" form-control">
                             <label for="">Nome</label>
-                            <input type="text">
+                            <input type="text" placeholder="Digite seu Nome...">
                         </div>
 
                         <div class="form-control">
                             <label for="">Seu Email</label>
-                            <input type="text">
+                            <input type="text" placeholder="Digite seu Email...">
                         </div>
                         <div class="form-control">
                             <label for="">Mensagem</label>
-                            <textarea type="text" rows="8" cols="1"></textarea>
+                            <textarea type="text" rows="8" cols="1" placeholder="Digite sua Mensagem..."></textarea>
                         </div>
 
                         <div>
@@ -202,31 +288,21 @@
         </section>
 
         <section class="footer" id="FOOTER">
-            <div class="page-width flex center full-h">
+            <div class="page-width flex center full-h full-w justify-between">
 
-                <h2 class="half text-center">
-                    Ryan C.
-                </h2>
-
-                <div class="half flex center">
-                    <div>
-                        <p>-- Socials</p>
-
-                        <li>
-                            <ul>Linkedin</ul>
-                            <ul>Facebook</ul>
-                            <ul>Twiiter</ul>
-                        </li>
-                    </div>
-
-                    <div>
-                        <p>-- Contacts</p>
-
-                        <li>
-                            <ul>ryanitj@gmail.com</ul>
-                        </li>
-                    </div>
+                <div class="flex center icon-container">
+                    <a target="_blank" href="https://www.linkedin.com/in/ryan-coelho-217b11200">
+                        <img src="./linkedin-3-48.ico" alt="">
+                    </a>
                 </div>
+
+                <div class="flex center icon-container">
+                    <a target="_blank" href="https://github.com/ryanitj">
+                        <img src="./icons8-github-64.png" alt="">
+                    </a>
+
+                </div>
+
             </div>
         </section>
     </div>
